--- a/test-1.html
+++ b/test-1.html
@@ -475,31 +475,92 @@ gtag('config', 'G-H1JW8YBDZ8');
     </div>
   </div>
 
-  <div class="focus-container" style="display: flex; align-items: center; justify-content: space-between; gap: 20px; text-decoration: none; box-sizing: border-box; flex-wrap: wrap;">
-    <div style="display: flex; align-items: flex-start; gap: 20px; flex: 1; min-width: 280px; flex-wrap: wrap; box-sizing: border-box;">
-      <div class="focus-badge" style="margin-top: 2px; flex-shrink: 0; box-sizing: border-box;">
-        <span style="width: 6px; height: 6px; background: #ffffff; border-radius: 50%; display: inline-block; vertical-align: middle;"></span>
-        <span style="vertical-align: middle;">CURRENT FOCUS</span>
-      </div>
-      
-      <div style="display: flex; flex-direction: column; gap: 10px; flex: 1; min-width: 260px; box-sizing: border-box;">
-        <div style="color: #0c2340; font-size: 15px; font-weight: 500; letter-spacing: -0.2px; line-height: 1.5;">
-          <span style="font-weight: 800;">February Qualifiers:</span> Completion of qualifying rounds and documentation of spring scoring metrics.
-        </div>
-        <div style="color: #0c2340; font-size: 15px; font-weight: 500; letter-spacing: -0.2px; line-height: 1.5;">
-          <span style="font-weight: 800;">Upcoming Competition:</span> Preparation for the Military City Collegiate.
-        </div>
-        <div style="color: #64748b; font-size: 14px; font-weight: 500; line-height: 1.5;">
-          <span style="font-weight: 800;">Current Academic & Physical Focus:</span> Coursework and recovery protocols aligned with back-to-back tournament scheduling.
-        </div>
-      </div>
-    </div>
+  <style>
+  /* Focus Container 기본 레이아웃 및 움직임 방지 */
+  .focus-container-v2 {
+    display: flex;
+    align-items: flex-start; /* 모든 요소를 상단에 칼정렬 */
+    justify-content: flex-start; /* 왼쪽부터 정렬 */
+    gap: 20px;
+    padding: 20px;
+    background: #ffffff;
+    border: 2px solid #e2e8f0;
+    border-radius: 12px;
+    width: 100%;
+    box-sizing: border-box;
+    transition: border-color 0.2s; /* 물리적 이동(transform) 제거 */
+  }
 
-    <a href="ncaa-stats.html#Current-Focus" class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #e2e8f0; background: #ffffff; transition: 0.2s; box-sizing: border-box; flex-shrink: 0; text-decoration: none;">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-        <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
-      </svg>
-    </a>
+  /* 전체 컨테이너 호버 시 테두리만 변경 */
+  .focus-container-v2:hover {
+    border-color: #0c2340;
+  }
+
+  /* 호버 시 내부 아이콘 버튼만 반응 */
+  .focus-container-v2:hover .focus-arrow-svg {
+    background: #0c2340 !important;
+  }
+  .focus-container-v2:hover .focus-arrow-svg svg {
+    stroke: #ffffff;
+  }
+
+  .focus-badge-v2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    background: #0c2340;
+    color: #ffffff;
+    font-size: 10px;
+    font-weight: 900;
+    padding: 6px 12px;
+    border-radius: 6px;
+    white-space: nowrap;
+    letter-spacing: 0.5px;
+    margin-top: 2px; /* 첫 줄 텍스트와 높이 맞춤 */
+    flex-shrink: 0;
+  }
+
+  .focus-content-group {
+    display: flex;
+    flex-direction: column;
+    gap: 12px; /* 문단 간 간격 */
+    flex: 1;
+    text-align: left; /* 왼쪽 정렬 명시 */
+  }
+
+  @media (max-width: 768px) {
+    .focus-container-v2 {
+      gap: 15px;
+      padding: 16px;
+    }
+  }
+</style>
+
+<div class="focus-container-v2">
+  <div class="focus-badge-v2">
+    <span style="width: 6px; height: 6px; background: #ffffff; border-radius: 50%;"></span>
+    CURRENT FOCUS
+  </div>
+
+  <div class="focus-content-group">
+    <div style="color: #0c2340; font-size: 15px; font-weight: 500; letter-spacing: -0.2px; line-height: 1.5;">
+      <span style="font-weight: 800;">February Qualifiers:</span> Completion of qualifying rounds and documentation of spring scoring metrics.
+    </div>
+    <div style="color: #0c2340; font-size: 15px; font-weight: 500; letter-spacing: -0.2px; line-height: 1.5;">
+      <span style="font-weight: 800;">Upcoming Competition:</span> Preparation for the Military City Collegiate.
+    </div>
+    <div style="color: #64748b; font-size: 14px; font-weight: 500; line-height: 1.5;">
+      <span style="font-weight: 800;">Current Academic & Physical Focus:</span> Coursework and recovery protocols aligned with back-to-back tournament scheduling.
+    </div>
+  </div>
+
+  <a href="ncaa-stats.html#Current-Focus" class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #e2e8f0; background: #ffffff; transition: 0.2s; box-sizing: border-box; flex-shrink: 0; text-decoration: none;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="7" y1="17" x2="17" y2="7"></line>
+      <polyline points="7 7 17 7 17 17"></polyline>
+    </svg>
+  </a>
 </div>
      
 </div>
