--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ gtag('js', new Date());
 
 // Google Analytics 4 Configuration
 gtag('config', 'G-H1JW8YBDZ8', {
-'page_title': 'Joshua Hong Official Site',
+'page_title': 'Joshua Hong Official Site',쳑ㄱ
 'send_page_view': true,
 'cookie_flags': 'SameSite=None;Secure'
 });
@@ -466,7 +466,7 @@ gtag('config', 'G-H1JW8YBDZ8');
           </div>
         </div>
         
-        <style>
+ <style>
   /* Focus Container 스타일 가이드 */
   .focus-container {
     display: flex;
@@ -475,7 +475,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     gap: 20px;
     padding: 20px;
     background: #ffffff;
-    border: 2px solid #e2e8f0;
+    border: 2px solid #0c2340; /* 분석 결과: 위 테이블과 동일한 네이비 색상으로 수정 */
     border-radius: 12px;
     text-decoration: none;
     transition: border-color 0.2s;
@@ -546,7 +546,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     </div>
   </div>
 
-  <div class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #e2e8f0; background: #ffffff; transition: 0.2s; box-sizing: border-box; flex-shrink: 0;">
+  <div class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #0c2340; background: #ffffff; transition: 0.2s; box-sizing: border-box; flex-shrink: 0;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
       <line x1="7" y1="17" x2="17" y2="7"></line>
       <polyline points="7 7 17 7 17 17"></polyline>
