--- a/test-1.html
+++ b/test-1.html
@@ -477,37 +477,37 @@ gtag('config', 'G-H1JW8YBDZ8');
 
 
 
-     <style>
-  /* Focus Container: 고정 레이아웃 및 움직임 완전 제거 */
-  .focus-container-v2 {
+<style>
+  /* Focus Container 스타일 가이드 */
+  .focus-container {
     display: flex;
-    align-items: flex-start; /* 모든 요소를 상단에 칼정렬 */
-    justify-content: flex-start; /* 왼쪽부터 정렬 */
+    align-items: flex-start; /* 상단 기준 칼정렬 */
+    justify-content: flex-start; /* 왼쪽 정렬 고정 */
     gap: 20px;
     padding: 20px;
     background: #ffffff;
-    border: 2px solid #e2e8f0; /* 라인 상시 노출 */
+    border: 2px solid #0c2340; /* 분석 결과: 위 테이블과 동일한 네이비 색상으로 수정 */
     border-radius: 12px;
+    text-decoration: none;
+    transition: border-color 0.2s;
     width: 100%;
     box-sizing: border-box;
-    /* transition 제거: 호버 시 변화 없음 */
+    margin-bottom: 20px;
   }
 
-  /* 컨테이너 자체의 호버 효과 제거 (기존 테두리 변경 로직 삭제) */
-  .focus-container-v2:hover {
-    border-color: #e2e8f0; /* 테두리 고정 */
+  .focus-container:hover {
+    border-color: #0c2340;
   }
 
-  /* 오직 우측 아이콘 버튼만 호버 시 반응 */
-  .focus-container-v2:hover .focus-arrow-svg {
+  /* 호버 시 전체가 흔들리지 않도록 아이콘만 변화 */
+  .focus-container:hover .focus-arrow-svg {
     background: #0c2340 !important;
-    border-color: #0c2340 !important;
   }
-  .focus-container-v2:hover .focus-arrow-svg svg {
+  .focus-container:hover .focus-arrow-svg stroke {
     stroke: #ffffff;
   }
 
-  .focus-badge-v2 {
+  .focus-badge {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -518,53 +518,52 @@ gtag('config', 'G-H1JW8YBDZ8');
     font-weight: 900;
     padding: 6px 12px;
     border-radius: 6px;
-    white-space: nowrap;
+    white-space: nowrap; /* 배지 형태 유지 */
     letter-spacing: 0.5px;
-    margin-top: 2px; /* 첫 줄 텍스트와 높이 정렬 */
-    flex-shrink: 0;
   }
 
-  .focus-content-group {
+  .focus-text-group {
     display: flex;
     flex-direction: column;
-    gap: 12px; /* 문단 간 간격 */
+    gap: 4px;
     flex: 1;
-    text-align: left; /* 왼쪽 정렬 칼고정 */
+    text-align: left; /* 텍스트 왼쪽 정렬 */
   }
 
   @media (max-width: 768px) {
-    .focus-container-v2 {
-      gap: 15px;
+    .focus-container {
+      gap: 12px;
       padding: 16px;
+    }
+    .focus-badge {
+      font-size: 9px;
+      padding: 4px 8px;
     }
   }
 </style>
 
-<div class="focus-container-v2">
-  <div class="focus-badge-v2">
+<a href="ncaa-stats.html#Current-Focus" class="focus-container">
+  <div class="focus-badge" style="margin-top: 2px;">
     <span style="width: 6px; height: 6px; background: #ffffff; border-radius: 50%;"></span>
     CURRENT FOCUS
   </div>
 
-  <div class="focus-content-group">
-    <div style="color: #0c2340; font-size: 15px; font-weight: 500; letter-spacing: -0.2px; line-height: 1.5;">
-      <span style="font-weight: 800;">February Qualifiers:</span> Completion of qualifying rounds and documentation of spring scoring metrics.
+  <div class="focus-text-group">
+    <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4;">
+      February Qualifiers: scoring variance review and dispersion control.
     </div>
-    <div style="color: #0c2340; font-size: 15px; font-weight: 500; letter-spacing: -0.2px; line-height: 1.5;">
-      <span style="font-weight: 800;">Upcoming Competition:</span> Preparation for the Military City Collegiate.
-    </div>
-    <div style="color: #64748b; font-size: 14px; font-weight: 500; line-height: 1.5;">
-      <span style="font-weight: 800;">Current Academic & Physical Focus:</span> Coursework and recovery protocols aligned with back-to-back tournament scheduling.
+    <div style="color: #64748b; font-size: 14px; font-weight: 600; line-height: 1.4;">
+      Technical sessions and academic scheduling in place.
     </div>
   </div>
 
-  <a href="ncaa-stats.html#Current-Focus" class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #e2e8f0; background: #ffffff; transition: 0.2s; box-sizing: border-box; flex-shrink: 0; text-decoration: none;">
+  <div class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #0c2340; background: #ffffff; transition: 0.2s; box-sizing: border-box; flex-shrink: 0;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
       <line x1="7" y1="17" x2="17" y2="7"></line>
       <polyline points="7 7 17 7 17 17"></polyline>
     </svg>
-  </a>
-</div>
+  </div>
+</a>
 
 
      
