--- a/test-1.html
+++ b/test-1.html
@@ -486,7 +486,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     gap: 20px;
     padding: 20px;
     background: #ffffff;
-    border: 2px solid #0c2340; /* 분석 결과: 위 테이블과 동일한 네이비 색상으로 수정 */
+    border: 2px solid #0c2340;
     border-radius: 12px;
     text-decoration: none;
     transition: border-color 0.2s;
@@ -550,10 +550,13 @@ gtag('config', 'G-H1JW8YBDZ8');
 
   <div class="focus-text-group">
     <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4;">
-      February Qualifiers: scoring variance review and dispersion control.
+      February Qualifiers: Completion of qualifying rounds and documentation of spring scoring metrics.
     </div>
-    <div style="color: #64748b; font-size: 14px; font-weight: 600; line-height: 1.4;">
-      Technical sessions and academic scheduling in place.
+    <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4; margin-top: 8px;">
+      Upcoming Competition: Preparation for the Military City Collegiate.
+    </div>
+    <div style="color: #64748b; font-size: 14px; font-weight: 600; line-height: 1.4; margin-top: 8px;">
+      Current Academic & Physical Focus: Coursework and recovery protocols aligned with back-to-back tournament scheduling.
     </div>
   </div>
 
